# CliXLuster-app

./: README.md  package-lock.json
.github/workflows/: frontend-ci.yml
CliXLuster-BE/: main.py  pyproject.toml
CliXLuster-BE/app/core/: celery_app.py
CliXLuster-BE/app/models/: schemas.py
CliXLuster-BE/app/routes/: cluster.py
CliXLuster-BE/app/workers/: tasks.py
CliXLuster-FE/: Dockerfile  README.md  index.html  package-lock.json  package.json
CliXLuster-FE/.github/workflows/: frontend-ci.yml
CliXLuster-FE/src/: App.jsx  Logo.jsx
