[project]
name = "clixluster-be"
version = "0.1.0"
description = "Backend API and Worker for CliXLuster"
authors = [
    {name = "Ido Toivi"}
]
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "redis (>=8.0.0,<9.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
